replacing class.newInstance() method by getDeaclaredConstructor().newInstance()